# temporal_hybridization_number

./: .gitignore  CMakeLists.txt  cherrypick.cpp  cherrypick.h  cherrypick_default.cpp  cherrypick_default.h  cherrypick_nonbinary.cpp  cherrypick_nonbinary.h  cherrypick_semitemporal.cpp  cherrypick_semitemporal.h  cluster_reduction.cpp  cluster_reduction.h  cmake_install.cmake  common.cpp  common.h  cxxopts.cpp  greedy_pick.cpp  greedy_pick.h  main.cpp  newick.cpp  newick.h  preamble.h  readme.md  tests.cpp  tree.cpp  tree.h  util.cpp  util.h
